[project]
name = "comfyui-visualquerytemplate"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "transformers"]

[project.urls]
Repository = "https://github.com/celoron/ComfyUI-VisualQueryTemplate"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "celoron"
DisplayName = "ComfyUI-VisualQueryTemplate"
Icon = ""
